--- a/.github/workflows/ActionsBuild.yml
+++ b/.github/workflows/ActionsBuild.yml
@@ -42,7 +42,7 @@ jobs:
       - name: install python packages, SLiCAP dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r my-tools/requirements.txt
+          pip install -r requirements.txt
       - name: make html files
         run: |
           cd docs
