--- a/.github/workflows/ActionsBuild.yml
+++ b/.github/workflows/ActionsBuild.yml
@@ -43,6 +43,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: install SLiCAP
+        run: python setup.py install --user
       - name: make html files
         run: |
           cd docs
